Adding POST, PUT and DELETE methods to categories collection
