# src/models/categoryModel.js
@@ -12,3 +12,18 @@ export const findCategoryById = async (id) => {
   const db = getDB();
   return await db.collection(COLLECTION_NAME).findOne({ _id: new ObjectId(id) });
 };
+
+export const insertCategory = async (category) => {
+  const db = getDB();
+  return await db.collection(COLLECTION_NAME).insertOne(category);
+};
+
+export const updateCategory = async (id, category) => {
+  const db = getDB();
+  return await db.collection(COLLECTION_NAME).updateOne({ _id: new ObjectId(id) }, { $set: category });
+};
+
+export const deleteCategory = async (id) => {
+  const db = getDB();
+  return await db.collection(COLLECTION_NAME).deleteOne({ _id: new ObjectId(id) });
+};
